--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -45,9 +45,11 @@ tokio = { version = "1.12.0", features = ["full"] }
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 lazy_static = "1.4.0"
 futures = "0.3.17"
+quick-xml = { version = "0.22.0", features = ["serialize"], optional = true }
+zip = { version = "0.5.13", optional = true}
 
 [features]
 default = ["db", "file", "json"]
 db = ["sea-query", "sqlx"]
-file = []
+file = ["quick-xml", "zip"]
 json = []
