--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -50,6 +50,7 @@ uuid = { version = "0.8.2", features = ["serde", "v4"] }
 quick-xml = { version = "0.22.0", features = ["serialize"], optional = true }
 zip = { version = "0.5.13", optional = true }
 bson2 = { version = "2.0.3", optional = true }
+nom = "7.1.0"
 
 [features]
 default = ["db", "file", "bson"]
