--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -53,11 +53,11 @@ zip = { version = "0", optional = true }
 bson2 = { version = "2", optional = true }
 
 [features]
-default = ["sql", "file", "xl", "csv", "parquet", "bson", "mgo"]
+default = ["sql", "file", "xl", "csv", "parquet", "bson", "mongo"]
 sql = ["sea-query", "sqlx"]
 file = ["xl", "csv", "parquet"]
 xl = ["quick-xml", "zip"]
 csv = []
 parquet = []
 bson = ["bson2"]
-mgo = []
+mongo = []
