--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -53,11 +53,12 @@ zip = { version = "0", optional = true }
 bson2 = { version = "2", optional = true }
 
 [features]
-default = ["sql", "file", "xl", "csv", "parquet", "bson", "mongo"]
+default = ["sql", "file", "xl", "csv", "parquet", "json", "bson", "mongo"]
 sql = ["sea-query", "sqlx"]
 file = ["xl", "csv", "parquet"]
 xl = ["quick-xml", "zip"]
 csv = []
 parquet = []
+json = []
 bson = ["bson2"]
-mongo = []
+mongo = ["bson2"]
