--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -50,7 +50,7 @@ tokio = { version = "1", features = ["full"] }
 uuid = { version = "0", features = ["serde", "v4"] }
 quick-xml = { version = "0", features = ["serialize"], optional = true }
 zip = { version = "0", optional = true }
-bson2 = { version = "2", optional = true }
+bson2 = { version = "2", features = ["chrono-0_4", "uuid-0_8", "serde_with"], optional = true }
 
 [features]
 default = ["sql", "file", "xl", "csv", "parquet", "json", "bson", "mongo"]
