--- a/examples/xl_process_service/Cargo.toml
+++ b/examples/xl_process_service/Cargo.toml
@@ -5,3 +5,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-multipart = "0"
+actix-web = "3"
+futures-util = "0"
+sanitize-filename = "0"
+uuid = { version = "0", features = ["v4"] }
