--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -5,11 +5,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# General dependencies
 async-trait = "0"
 anyhow = "1"
 bigdecimal = "0"
 chrono = { version = "0", features = ["serde"] }
+comfy-table = "5"
+futures = "0"
 itertools = "0"
+lazy_static = "1"
+nom = "7"
 polars = { version = "0", features = [
     "strings",
     "serde",
@@ -24,10 +29,11 @@ polars = { version = "0", features = [
 rust_decimal = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-lazy_static = "1"
-futures = "0"
-nom = "7"
+thiserror = "1"
+tokio = { version = "1", features = ["full"] }
+uuid = { version = "0", features = ["serde", "v4"] }
 
+# Featured dependencies
 sea-query = { version = "0", features = [
     "with-chrono",
     "with-json",
@@ -45,9 +51,6 @@ sqlx = { version = "0", features = [
     "decimal",
     "uuid"
 ], optional = true }
-thiserror = "1"
-tokio = { version = "1", features = ["full"] }
-uuid = { version = "0", features = ["serde", "v4"] }
 quick-xml = { version = "0", features = ["serialize"], optional = true }
 zip = { version = "0", optional = true }
 bson2 = { version = "2", features = ["chrono-0_4", "uuid-0_8", "serde_with"], optional = true }
