--- a/examples/file_process_service/Cargo.toml
+++ b/examples/file_process_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "xl_process_service"
+name = "file_process_service"
 authors = ["JacobX <jacobbishopxy@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
