--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -34,6 +34,9 @@ uuid = { version = "0", features = ["serde", "v4"] }
 
 # Featured dependencies
 sea-query = { version = "0", features = [
+    "sqlx-postgres",
+    "sqlx-mysql",
+    "sqlx-sqlite",
     "with-chrono",
     "with-json",
     "with-rust_decimal",
