--- a/examples/file_process_service/Cargo.toml
+++ b/examples/file_process_service/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 actix-multipart = "0"
-actix-web = "4"
+actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
 futures-util = "0"
 sanitize-filename = "0"
 serde_json = "1"
