--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -15,6 +15,7 @@ itertools = "0"
 lazy_static = "1"
 nom = "7"
 polars = { version = "0", features = [
+    "bigidx",
     "strings",
     "serde",
     "serde-lazy",
