--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -57,9 +57,8 @@ zip = { version = "0", optional = true }
 bson2 = { version = "2", features = ["chrono-0_4", "uuid-0_8", "serde_with"], optional = true }
 
 [features]
-default = ["sql", "file", "xl", "csv", "parquet", "json", "bson", "mongo"]
+default = ["sql", "xl", "csv", "parquet", "json", "bson", "mongo"]
 sql = ["sea-query", "sqlx"]
-file = ["xl", "csv", "parquet"]
 xl = ["quick-xml", "zip"]
 csv = []
 parquet = []
