--- a/examples/dispatcher_service/Cargo.toml
+++ b/examples/dispatcher_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "file_process_service"
+name = "dispatcher_service"
 authors = ["JacobX <jacobbishopxy@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
@@ -9,10 +9,11 @@ fabrix = { path = "../../fabrix" }
 
 actix-multipart = "0"
 actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
-clap = { version = "3.1.16", features = ["derive"] }
-futures-util = "0"
+derive_more = "0"
+env_logger = "0"
+futures = "0"
+log = "0"
+log4rs = { version = "1", features = ["console_appender", "file_appender", "rolling_file_appender", "compound_policy", "size_trigger"] }
 sanitize-filename = "0"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serde = "1"
-uuid = { version = "0", features = ["v4"] }
-
