--- a/examples/dispatcher_service/Cargo.toml
+++ b/examples/dispatcher_service/Cargo.toml
@@ -9,7 +9,6 @@ fabrix = { path = "../../fabrix" }
 
 actix-multipart = "0"
 actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
-derive_more = "0"
 env_logger = "0"
 futures = "0"
 log = "0"
@@ -17,3 +16,8 @@ log4rs = { version = "1", features = ["console_appender", "file_appender", "roll
 sanitize-filename = "0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+thiserror = "1"
+
+[dev-dependencies]
+anyhow = "1"
+sqlx = "0"
