--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
 		"appenders",
 		"BSON",
 		"BYTEA",
+		"charlen",
 		"chrono",
 		"concat",
 		"Cond",
@@ -22,6 +23,7 @@
 		"ftype",
 		"hconcat",
 		"hstack",
+		"ifnull",
 		"iloc",
 		"impls",
 		"itertools",
