--- a/examples/file_process_service/Cargo.toml
+++ b/examples/file_process_service/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 fabrix = { path = "../../fabrix" }
+fabrix-xl = { path = "../../fabrix-xl" }
 
 actix-multipart = "0"
 actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
