--- a/fabrix-core/Cargo.toml
+++ b/fabrix-core/Cargo.toml
@@ -6,3 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bigdecimal = "0"
+chrono = { version = "0", features = ["serde"] }
+itertools = "0"
+polars = { version = "0", features = [
+    "lazy",
+    "bigidx",
+    "strings",
+    "parquet",
+    "json",
+    "dtype-full",
+    "object",
+] }
+rust_decimal = "1"
+serde = { version = "1", features = ["derive"] }
+thiserror = "1"
+uuid = { version = "0", features = ["serde", "v4"] }
