--- a/fabrix-core/Cargo.toml
+++ b/fabrix-core/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
 name = "fabrix-core"
+authors = ["JacobX <jacobbishopxy@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 chrono = { version = "0", features = ["serde"] }
