--- a/fabrix-sql/Cargo.toml
+++ b/fabrix-sql/Cargo.toml
@@ -42,4 +42,4 @@ uuid = { version = "0", features = ["serde", "v4"] }
 [dev-dependencies]
 anyhow = "1"
 serde_json = "1"
-tokio = "1"
+tokio = { version = "1", features = ["full"] }
