--- a/fabrix-dyn-conn/Cargo.toml
+++ b/fabrix-dyn-conn/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2021"
 
 
 [dependencies]
+fabrix-sql = { path = "../fabrix-sql" }
+
+async-trait = "0"
 dashmap = "5"
 serde = { version = "1", features = ["derive"] }
+thiserror = "1"
 
 [dev-dependencies]
 fabrix-core = { path = "../fabrix-core" }
-fabrix-sql = { path = "../fabrix-sql" }
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "0", features = ["serde", "v4"] }
