--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 fabrix-core = { path = "../fabrix-core" }
 fabrix-sql = { path = "../fabrix-sql", optional = true }
 fabrix-xl = { path = "../fabrix-xl", optional = true }
+fabrix-mg = { path = "../fabrix-mg", optional = true }
+fabrix-dyn-conn = { path = "../fabrix-dyn-conn", optional = true }
 
 # General dependencies
 async-trait = "0"
@@ -30,11 +32,12 @@ uuid = { version = "0", features = ["serde", "v4"] }
 
 
 [features]
-default = ["sql", "xl", "csv", "parquet", "json", "bson", "mongo"]
+default = ["sql", "xl", "csv", "parquet", "json", "bson", "mongo", "dync"]
 sql = ["dep:fabrix-sql"]
 xl = ["dep:fabrix-xl"]
 csv = []
 parquet = []
 json = []
-bson = []
-mongo = []
+bson = ["dep:fabrix-mg"]
+mongo = ["dep:fabrix-mg"]
+dync = ["dep:fabrix-dyn-conn"]
