--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
 	"rust-analyzer.linkedProjects": [
 		"fabrix/Cargo.toml",
 		"examples/file_process_service/Cargo.toml",
-		"examples/dispatcher_service/Cargo.toml"
+		"examples/dispatcher_service/Cargo.toml",
+		"examples/dync_service/Cargo.toml"
 	],
 	"cSpell.words": [
 		"accum",
