--- a/examples/dync_service/Cargo.toml
+++ b/examples/dync_service/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fabrix = { path = "../../fabrix" }
+fabrix = { path = "../../fabrix", features = ["sql", "dync"] }
 
 actix-web = "4"
 serde = { version = "1", features = ["derive"] }
