--- a/fabrix-mg/Cargo.toml
+++ b/fabrix-mg/Cargo.toml
@@ -15,7 +15,8 @@ thiserror = "1.0.31"
 futures = "0.3.21"
 async-trait = "0.1.56"
 
-
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
 
 [features]
 default = ["derive"]
