feat: `Fabrix` se/de

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
 		"Cond",
 		"conv",
 		"Dataframe",
+		"Datelike",
 		"datetime",
 		"dtype",
 		"dtypes",
@@ -40,6 +41,7 @@
 		"sqlz",
 		"STTM",
 		"svalue",
+		"Timelike",
 		"TMAP",
 		"Uncategorized",
 		"Upcasting",
