--- a/examples/dispatcher_service/Cargo.toml
+++ b/examples/dispatcher_service/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fabrix = { path = "../../fabrix", features = ["sql", "xl"] }
+fabrix = { path = "../../fabrix", features = ["sql", "xl", "mongo"] }
 
 actix-multipart = "0"
 actix-web = { version = "4", default-features = false, features = ["cookies", "macros"]}
