--- a/fabrix/Cargo.toml
+++ b/fabrix/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 [dependencies]
 # Self-contained dependencies
 fabrix-core = { path = "../fabrix-core" }
-fabrix-sql = { path = "../fabrix-sql", optional = true }
+fabrix-json = { path = "../fabrix-json", optional = true }
+fabrix-csv = { path = "../fabrix-csv", optional = true }
+fabrix-parquet = { path = "../fabrix-parquet", optional = true }
 fabrix-xl = { path = "../fabrix-xl", optional = true }
+fabrix-sql = { path = "../fabrix-sql", optional = true }
 fabrix-mg = { path = "../fabrix-mg", optional = true }
 fabrix-dyn-conn = { path = "../fabrix-dyn-conn", optional = true }
 
@@ -33,20 +36,20 @@ uuid = { version = "0", features = ["serde", "v4"] }
 
 [features]
 default = ["csv", "parquet", "json"]
-sql = ["dep:fabrix-sql"]
+json = ["dep:fabrix-json"]
 xl = ["dep:fabrix-xl"]
-csv = []
-parquet = []
-json = []
+csv = ["dep:fabrix-csv"]
+parquet = ["dep:fabrix-parquet"]
+sql = ["dep:fabrix-sql"]
 mongo = ["dep:fabrix-mg"]
 dync = ["dep:fabrix-dyn-conn"]
 
 full = [
-    "sql",
-    "xl",
+    "json",
     "csv",
     "parquet",
-    "json",
+    "xl",
+    "sql",
     "mongo",
     "dync",
 ]
