--- a/fabrix-json/Cargo.toml
+++ b/fabrix-json/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "fabrix-json"
+authors = ["JacobX <jacobbishopxy@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+fabrix-core = { path = "../fabrix-core" }
