chore: udpate deps

--- a/fabrix-json/Cargo.toml
+++ b/fabrix-json/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 fabrix-core = { path = "../fabrix-core" }
+
+serde = { version = "1", features = ["derive"] }
+thiserror = "1"
