--- a/fabrix-json/Cargo.toml
+++ b/fabrix-json/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 fabrix-core = { path = "../fabrix-core" }
 
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 thiserror = "1"
