--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
 		"iloc",
 		"impls",
 		"itertools",
+		"namedrow",
 		"nanos",
 		"nocapture",
 		"peekable",
@@ -37,8 +38,6 @@
 		"rels",
 		"reqwest",
 		"rowframe",
-		"rowmap",
-		"rowmaps",
 		"serde",
 		"Sqlite",
 		"sqlx",
